test/should-fail/vsgc1195.f3
/*
 * @test/compile-error
 */

class A{
    /*
    function doIt(x:String[]):String[]{
            return x;
    }
    */
    var doIt=function ():String[]{
            ["F3","Rocks"];
    }
}
var obj:A = A{};

obj.doIt(["F3","Rocks"]);
